[package]
name = "maniac-raft"
version = "0.1.0"
edition = "2024"
authors = ["Maniac Team"]
description = "Maniac runtime adapter for OpenRaft consensus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bop"
keywords = ["raft", "consensus", "distributed", "async"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["multi"]
multi = []

[dependencies]
# Upstream openraft
openraft = { workspace = true }

# Maniac runtime (for async primitives)
maniac = { path = "../maniac", version = "0.1.0", default-features = false, features = [
    "std",
    "race",
    "mio",
    "poll",
    "bytes",
    "utils",
    "async-cancel",
    "tracing",
] }

# Other dependencies
crc64fast-nvme = { workspace = true }
dashmap = { workspace = true }
flume = "0.11"
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { workspace = true }
futures = { workspace = true }
futures-lite = { workspace = true }
tracing-subscriber = { version = "0.3" }

[[example]]
name = "multi_raft_cluster"
path = "examples/multi_raft_cluster.rs"
