[package]
name = "maniac-raft"
version = "0.1.0"
edition = "2024"
authors = ["Maniac Team"]
description = "Maniac runtime adapter for OpenRaft consensus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bop"
keywords = ["raft", "consensus", "distributed", "async"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["multi"]
multi = []

[dependencies]
futures = { workspace = true }
# Upstream openraft
openraft = { workspace = true, features = ["tokio-rt"] }

# Maniac runtime (for async primitives)
maniac = { path = "../maniac", version = "0.1.0", default-features = false, features = [
    "std",
    "race",
    "iouring",
    "poll",
    "mio",
    "bytes",
    "utils",
    "async-cancel",
    "tracing",
    "mkdirat",
    "unlinkat",
] }

# Other dependencies
crc64fast-nvme = { workspace = true }
congee = { workspace = true }
dashmap = { workspace = true }
crossfire = "2.1.8"
flume = "0.12"
kanal = "0.1"
libmdbx = "0.6"
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { workspace = true }
futures-lite = { workspace = true }
kanal = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.10"

[[example]]
name = "multi_raft_cluster"
path = "examples/multi_raft_cluster.rs"

[[example]]
name = "network_stress_test"
path = "examples/network_stress_test.rs"

[profile.release]
debug = true

# [profile.profiling]
# inherits = "release"
# debug = true
