[package]
name = "vertx-cluster"
version = "0.1.0"
edition = "2024"
authors = ["BOP Team"]
description = "Distributed clustering and state management for BOP platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bop"

[dependencies]
# Local dependencies
maniac-sys = { workspace = true }

# Serialization and data handling
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
crc32fast = { workspace = true }

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Collections
multimap = { workspace = true }

# Async support (optional dependencies)
tokio = { workspace = true, features = ["full"], optional = true }

# Networking dependencies
# compio = { workspace = true }
# compio-tls = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs", "std"] }
aws-lc-rs = { workspace = true }
rustls-pemfile = { workspace = true }
log = { workspace = true }

# Distributed consensus (optional dependency)
openraft = { workspace = true, optional = true }

[features]
default = []
# Enable async clustering support
async = ["tokio"]
# Enable Raft consensus backend
raft = ["openraft"]

[[bin]]
name = "vertx-cluster"
path = "src/main.rs"

[dev-dependencies]
tokio-test = { workspace = true }
