[package]
name = "rapp"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rapp"
path = "src/main.rs"

[dependencies]

[profile.release]
strip = "symbols"  # Strip debug symbols (more aggressive than `true`)
debug = false  # No debug info
opt-level = 3