[package]
name = "bop-compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bopc"
path = "src/main.rs"

[lib]
name = "libbopc"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
rlsf = "0.2"
futures = "0.3"
proc-macro2 = "1.0.60"
allocator-api2 = "0.2.21"
ghost-cell = "0.2.6"
bumpalo = { version = "3.17.0", features = ["collections", "boxed"] }

[target.'cfg(target_os = "wasi")'.dependencies]
rlsf = "0.2"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
snmalloc-rs = "0.3"

#[profile.release]
#opt-level = 2
#lto = true
#strip = true
#panic = "abort"