[package]
name = "bop-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable the optional dependency on bop-sys
# sys = ["dep:bop-sys"]
# Enable allocation statistics tracking
alloc-stats = []
# Optionally enable UDP uSockets bindings/wrappers
usockets-udp = []

[dependencies]
bop-sys = { path = "../bop-sys", optional = false }
bitflags = "2"
multimap = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
byteorder = "1.5"
crc32fast = "1.4"
# openraft = "0.9"
# tokio = { version = "1.0", features = ["full"] }
# async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true