[package]
name = "bop-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable the optional dependency on bop-sys
# sys = ["dep:bop-sys"]
# Enable allocation statistics tracking
alloc-stats = []
# Optionally enable UDP uSockets bindings/wrappers
usockets-udp = []

[dependencies]
bop-sys = { path = "../bop-sys", optional = false }
bitflags = "2"
multimap = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
byteorder = "1.5"
crc32fast = "1.4"
crc64fast-nvme = "1.2"
hashbrown = "0.16.0"
memmap2 = "0.9"
tempfile = "3.8"
bincode = "1.3"
crossbeam = "0.8"
lru = "0.12"
zstd = "0.12"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-types = "1.0"
aws-smithy-types = "1.0"
aws-credential-types = "1.0"
bytes = "1.0"
futures = "0.3"
aws-lc-rs = "1.14.0"
hdrhistogram = "7.5.4"
# openraft = "0.9"
# async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
core_affinity = "0.8.3"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1.0"
async-trait = "0.1"

[[bench]]
name = "aof_benchmarks"
harness = false

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation"
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true