[package]
name = "bop-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable the optional dependency on bop-sys
# sys = ["dep:bop-sys"]
# Enable allocation statistics tracking
alloc-stats = []
# Optionally enable UDP uSockets bindings/wrappers
usockets-udp = []

[dependencies]
# Core dependencies
aws-lc-rs = "1.14"
base64 = "0.21"
bincode = "1.3"
bitflags = "2"
byteorder = "1.5"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
congee = "0.4"
core_affinity = "0.8"
crc64fast-nvme = "1.2"
crossbeam = "0.8"
dashmap = "6.1"
futures = "0.3"
hashbrown = "0.16"
hdrhistogram = "7.5"
kanal = "0.1"
libc = "0.2"
lru = "0.12"
memmap2 = "0.9"
minio = "0.3"
multimap = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
thiserror = "1.0"
zstd = "0.13"

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
    "macros",
    "signal"
] }

# TLS/HTTP stack
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls = { version = "0.23", features = [
    "aws-lc-rs",      # Use AWS-LC-RS as crypto backend (AWS's fork of BoringSSL)
    "std",            # Standard library support
    "tls12",          # TLS 1.2 support
] }
rustls-pemfile = "2.2"      # For loading PEM files
rustls-pki-types = "1.12"    # Common certificate types
tokio-rustls = "0.26"
webpki-roots = "1.0.2"  # Mozilla's root certificate program

# Local dependencies
bop-sys = { path = "../bop-sys", optional = false }

# aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
# aws-sdk-s3 = "1.106.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1.0"
# async-trait = "0.1"

[[bench]]
name = "aof_benchmarks"
harness = false

[[bench]]
name = "sqlite_index_benchmarks"
harness = false

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation"
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
