[package]
name = "vertx-cluster"
version = "0.1.0"
edition = "2024"
authors = ["BOP Team"]
description = "Distributed clustering and state management for BOP platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bop"

[dependencies]
# Local dependencies
bop-rs = { path = "../bop-rs" }
bop-sys = { path = "../bop-sys" }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
byteorder = "1.5"
crc32fast = "1.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Collections
multimap = "0.8"

# Async support (optional dependencies)
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

# Distributed consensus (optional dependency)
openraft = { version = "0.9", optional = true }

[features]
default = []
# Enable async clustering support
async = ["tokio", "async-trait"]
# Enable Raft consensus backend
raft = ["openraft"]

[[bin]]
name = "vertx-cluster"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true